# x-lang

./: .gitignore  AGENTS.md  CLAUDE.md  COMPILER_ARCHITECTURE.md  COMPILER_ARCHITECTURE_RESEARCH.md  COMPILER_PIPELINE_AUDIT.md  Cargo.toml  Claude_Code_Plugins.md  DESIGN_GOALS.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  LICENSE-APACHE  LICENSE-BSD-3-CLAUSE  LICENSE-MIT  LICENSES.md  PLAN.md  PROGRAMMING_LANGUAGES_COMPREHENSIVE_RESEARCH.md  README.md  Ralph.md  SPEC.ebnf.md  SPEC.md  SPEC_CONFORMANCE.md  TODO.md  TODO_COMPILER_PIPELINE.md  UPDATE_SUMMARY.md  X_TO_C_COMPILATION_SPEC.md  ZEN.md  benchmark.c  benchmark.ilk  compile_benchmark.rs  compile_test.bat  compile_test.ps1  compile_with_zig.rs  test.sh  test_backends.sh  test_basic.c  test_basic.x  test_classes.x  test_complex.x  test_dict.zig  (+23 more)
.claude/: ralph-loop.local.md  settings.local.json
compiler/: AGENTS.md  Cargo.toml  INSTALLATION_GUIDE.md  RESTRUCTURE.md  test_interpolation.x  test_python_backend.rs
compiler/x-codegen-native/: AGENTS.md  CLAUDE.md  Cargo.toml  TASK.md
compiler/x-codegen-native/src/: emitter.rs  emitter_coff.rs  emitter_macho.rs  encoding.rs  lib.rs
compiler/x-codegen-native/src/assembly/: x86_64.rs
compiler/x-codegen-native/src/machine/: aarch64.rs  mod.rs  riscv64.rs  x86_64.rs
compiler/x-test-integration/: Cargo.toml
compiler/x-test-integration/src/: lib.rs
compiler/x-test-integration/tests/: backends.rs
crates/x-cli/: Cargo.toml
crates/x-cli/src/: main.rs
crates/x-spec/: Cargo.toml
crates/x-spec/cases/: expressions.toml  lexical.toml
docs/: Gemfile  IMPLEMENTATION_PLAN.md  _config.yml  appendix-01-keywords.md  appendix-02-operators.md  appendix-03-derivable-traits.md  appendix-04-useful-development-tools.md  appendix-05-editions.md  appendix-06-translations.md  appendix-07-how-x-is-made.md  ch01-01-installation.md  ch01-02-hello-world.md  ch01-03-guessing-game.md  ch02-00-common-programming-concepts.md  ch02-01-variables-and-mutability.md  ch02-02-data-types.md  ch02-03-functions.md  ch02-04-comments.md  ch02-05-control-flow.md  ch03-00-understanding-perceus.md  ch03-01-perceus-basics.md  ch03-02-perceus-advanced.md  ch04-01-structs.md  ch04-02-enums-and-pattern-matching.md  ch04-03-records.md  ch05-01-modules.md  ch05-02-packages.md  ch05-03-scope-and-imports.md  ch06-01-lists.md  ch06-02-maps.md  ch06-03-sets.md  ch06-04-strings.md  ch07-00-error-handling.md  ch07-01-option.md  ch07-02-result.md  ch07-03-panic.md  ch08-01-generic-data-types.md  ch08-02-traits.md  ch08-03-lifetimes.md  ch09-01-classes-and-objects.md  (+28 more)
examples/: 001  001.x  002.x  003.x  004.x  005.x  006.x  007.x  008.x  README.md  add.x  app.x  app_minimal.x  app_simple.x  async_demo.x  benchmark.c  benchmark.x  binary_trees.x  build_benchmarks.ps1  build_benchmarks.sh  ecommerce_api.x  ecommerce_api.zig  fannkuch_redux.x  fasta.x  hello  hello.js  hello.py  hello.ts  hello.x  hello.zig  http_server.zig  json_api.x  knucleotide.x  mandelbrot.x  nbody.x  pidigits.x  regex_redux.x  return42  revcomp.x  run_benchmarks_game_tests.ps1  (+7 more)
interpreter_test/: CLAUDE.md  TODO.md
leetcode/: PROGRESS.md  (+11 more)
(+7500 files in other folders)
